--- a/scss/profile/_addresses_employees.scss
+++ b/scss/profile/_addresses_employees.scss
@@ -44,7 +44,7 @@
         display: block;
         width: calc(100% + 42px);
         max-width: calc(100% + 42px);
-        margin: 0px -30px 47px -30px;
+        margin: 0px -30px 25px -30px;
         .addresses-table-row {
             height: 55px;
             width: 100%;
@@ -137,7 +137,7 @@
         display: block;
         width: calc(100% + 42px);
         max-width: calc(100% + 42px);
-        margin: 0px -30px 47px -30px;
+        margin: 0px -30px 25px -30px;
         .addresses-table-row {
             height: 55px;
             width: 100%;
@@ -295,10 +295,10 @@
                     justify-content: center;
                     border: 1px solid #2CB5FF;
                     background-color: #2CB5FF;
-                    border-radius: 16px;
+                    border-radius: 25px;
                     color: #FFFFFF;
                     text-decoration: none;
-                    padding: 8px 16px;
+                    padding: 8px 18px;
                     width: max-content;
                     height: 40px;
                     box-sizing: border-box;
